Fix issues with spacing on copywrite menu in IE

--- a/app/styles/components/copywrite.scss
+++ b/app/styles/components/copywrite.scss
@@ -50,3 +50,26 @@
     }
   }
 }
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .copyrights-section {
+    div {
+      .cp-section {
+        text-align: center;
+
+        p {
+          max-width: 100%;
+          white-space: normal;
+        }
+
+        a {
+          text-align: center;
+        }
+
+        img {
+          margin: 10px auto;
+        }
+      }
+    }
+  }
+}
